pyson/pyon/pyonParser.py
# Generated from pyon.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class pyonParser ( Parser ):

    grammarFileName = "pyon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'ctx'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "','", "':'", "'{'", "'}'", "'['", "']'", 
                     "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "TRUE", "FALSE", "NONE", 
                      "CTX", "KEY", "STRING", "OBJECT", "COLON", "COMMA", 
                      "LEFT_DICT", "RIGHT_DICT", "LEFT_LIST", "RIGHT_LIST", 
                      "LEFT_BUKKET", "RIGHT_BUKKEFT", "LINE_COMMENT", "COMMENT", 
                      "WS" ]

    RULE_entry_point = 0
    RULE_item_dict = 1
    RULE_items = 2
    RULE_other_items = 3
    RULE_item = 4
    RULE_value = 5
    RULE_values = 6
    RULE_other_values = 7
    RULE_item_list = 8
    RULE_item_tuple = 9
    RULE_item_object = 10

    ruleNames =  [ "entry_point", "item_dict", "items", "other_items", "item", 
                   "value", "values", "other_values", "item_list", "item_tuple", 
                   "item_object" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    TRUE=3
    FALSE=4
    NONE=5
    CTX=6
    KEY=7
    STRING=8
    OBJECT=9
    COLON=10
    COMMA=11
    LEFT_DICT=12
    RIGHT_DICT=13
    LEFT_LIST=14
    RIGHT_LIST=15
    LEFT_BUKKET=16
    RIGHT_BUKKEFT=17
    LINE_COMMENT=18
    COMMENT=19
    WS=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Entry_pointContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def item_dict(self):
            return self.getTypedRuleContext(pyonParser.Item_dictContext,0)


        def getRuleIndex(self):
            return pyonParser.RULE_entry_point

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntry_point" ):
                listener.enterEntry_point(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntry_point" ):
                listener.exitEntry_point(self)




    def entry_point(self):

        localctx = pyonParser.Entry_pointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_entry_point)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.item_dict()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Item_dictContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_DICT(self):
            return self.getToken(pyonParser.LEFT_DICT, 0)

        def items(self):
            return self.getTypedRuleContext(pyonParser.ItemsContext,0)


        def RIGHT_DICT(self):
            return self.getToken(pyonParser.RIGHT_DICT, 0)

        def getRuleIndex(self):
            return pyonParser.RULE_item_dict

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem_dict" ):
                listener.enterItem_dict(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem_dict" ):
                listener.exitItem_dict(self)




    def item_dict(self):

        localctx = pyonParser.Item_dictContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_item_dict)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(pyonParser.LEFT_DICT)
            self.state = 25
            self.items()
            self.state = 26
            self.match(pyonParser.RIGHT_DICT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def item(self):
            return self.getTypedRuleContext(pyonParser.ItemContext,0)


        def other_items(self):
            return self.getTypedRuleContext(pyonParser.Other_itemsContext,0)


        def getRuleIndex(self):
            return pyonParser.RULE_items

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItems" ):
                listener.enterItems(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItems" ):
                listener.exitItems(self)




    def items(self):

        localctx = pyonParser.ItemsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_items)
        try:
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pyonParser.KEY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.item()
                self.state = 29
                self.other_items()
                pass
            elif token in [pyonParser.RIGHT_DICT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Other_itemsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(pyonParser.COLON, 0)

        def item(self):
            return self.getTypedRuleContext(pyonParser.ItemContext,0)


        def other_items(self):
            return self.getTypedRuleContext(pyonParser.Other_itemsContext,0)


        def getRuleIndex(self):
            return pyonParser.RULE_other_items

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOther_items" ):
                listener.enterOther_items(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOther_items" ):
                listener.exitOther_items(self)




    def other_items(self):

        localctx = pyonParser.Other_itemsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_other_items)
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pyonParser.COLON]:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(pyonParser.COLON)
                self.state = 35
                self.item()
                self.state = 36
                self.other_items()
                pass
            elif token in [pyonParser.RIGHT_DICT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEY(self):
            return self.getToken(pyonParser.KEY, 0)

        def COMMA(self):
            return self.getToken(pyonParser.COMMA, 0)

        def value(self):
            return self.getTypedRuleContext(pyonParser.ValueContext,0)


        def getRuleIndex(self):
            return pyonParser.RULE_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem" ):
                listener.enterItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem" ):
                listener.exitItem(self)




    def item(self):

        localctx = pyonParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_item)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(pyonParser.KEY)
            self.state = 42
            self.match(pyonParser.COMMA)
            self.state = 43
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(pyonParser.INT, 0)

        def FLOAT(self):
            return self.getToken(pyonParser.FLOAT, 0)

        def TRUE(self):
            return self.getToken(pyonParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(pyonParser.FALSE, 0)

        def NONE(self):
            return self.getToken(pyonParser.NONE, 0)

        def STRING(self):
            return self.getToken(pyonParser.STRING, 0)

        def CTX(self):
            return self.getToken(pyonParser.CTX, 0)

        def item_dict(self):
            return self.getTypedRuleContext(pyonParser.Item_dictContext,0)


        def item_list(self):
            return self.getTypedRuleContext(pyonParser.Item_listContext,0)


        def item_object(self):
            return self.getTypedRuleContext(pyonParser.Item_objectContext,0)


        def getRuleIndex(self):
            return pyonParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = pyonParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_value)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pyonParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(pyonParser.INT)
                pass
            elif token in [pyonParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.match(pyonParser.FLOAT)
                pass
            elif token in [pyonParser.TRUE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.match(pyonParser.TRUE)
                pass
            elif token in [pyonParser.FALSE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.match(pyonParser.FALSE)
                pass
            elif token in [pyonParser.NONE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 49
                self.match(pyonParser.NONE)
                pass
            elif token in [pyonParser.STRING]:
                self.enterOuterAlt(localctx, 6)
                self.state = 50
                self.match(pyonParser.STRING)
                pass
            elif token in [pyonParser.CTX]:
                self.enterOuterAlt(localctx, 7)
                self.state = 51
                self.match(pyonParser.CTX)
                pass
            elif token in [pyonParser.LEFT_DICT]:
                self.enterOuterAlt(localctx, 8)
                self.state = 52
                self.item_dict()
                pass
            elif token in [pyonParser.LEFT_LIST]:
                self.enterOuterAlt(localctx, 9)
                self.state = 53
                self.item_list()
                pass
            elif token in [pyonParser.OBJECT]:
                self.enterOuterAlt(localctx, 10)
                self.state = 54
                self.item_object()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValuesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(pyonParser.ValueContext,0)


        def other_values(self):
            return self.getTypedRuleContext(pyonParser.Other_valuesContext,0)


        def getRuleIndex(self):
            return pyonParser.RULE_values

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValues" ):
                listener.enterValues(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValues" ):
                listener.exitValues(self)




    def values(self):

        localctx = pyonParser.ValuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_values)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pyonParser.INT, pyonParser.FLOAT, pyonParser.TRUE, pyonParser.FALSE, pyonParser.NONE, pyonParser.CTX, pyonParser.STRING, pyonParser.OBJECT, pyonParser.LEFT_DICT, pyonParser.LEFT_LIST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.value()
                self.state = 58
                self.other_values()
                pass
            elif token in [pyonParser.RIGHT_LIST, pyonParser.RIGHT_BUKKEFT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Other_valuesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(pyonParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(pyonParser.ValueContext,0)


        def other_values(self):
            return self.getTypedRuleContext(pyonParser.Other_valuesContext,0)


        def getRuleIndex(self):
            return pyonParser.RULE_other_values

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOther_values" ):
                listener.enterOther_values(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOther_values" ):
                listener.exitOther_values(self)




    def other_values(self):

        localctx = pyonParser.Other_valuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_other_values)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pyonParser.COLON]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.match(pyonParser.COLON)
                self.state = 64
                self.value()
                self.state = 65
                self.other_values()
                pass
            elif token in [pyonParser.RIGHT_LIST, pyonParser.RIGHT_BUKKEFT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Item_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_LIST(self):
            return self.getToken(pyonParser.LEFT_LIST, 0)

        def values(self):
            return self.getTypedRuleContext(pyonParser.ValuesContext,0)


        def RIGHT_LIST(self):
            return self.getToken(pyonParser.RIGHT_LIST, 0)

        def getRuleIndex(self):
            return pyonParser.RULE_item_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem_list" ):
                listener.enterItem_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem_list" ):
                listener.exitItem_list(self)




    def item_list(self):

        localctx = pyonParser.Item_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_item_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(pyonParser.LEFT_LIST)
            self.state = 71
            self.values()
            self.state = 72
            self.match(pyonParser.RIGHT_LIST)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Item_tupleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BUKKET(self):
            return self.getToken(pyonParser.LEFT_BUKKET, 0)

        def values(self):
            return self.getTypedRuleContext(pyonParser.ValuesContext,0)


        def RIGHT_BUKKEFT(self):
            return self.getToken(pyonParser.RIGHT_BUKKEFT, 0)

        def getRuleIndex(self):
            return pyonParser.RULE_item_tuple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem_tuple" ):
                listener.enterItem_tuple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem_tuple" ):
                listener.exitItem_tuple(self)




    def item_tuple(self):

        localctx = pyonParser.Item_tupleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_item_tuple)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(pyonParser.LEFT_BUKKET)
            self.state = 75
            self.values()
            self.state = 76
            self.match(pyonParser.RIGHT_BUKKEFT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Item_objectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT(self):
            return self.getToken(pyonParser.OBJECT, 0)

        def item_dict(self):
            return self.getTypedRuleContext(pyonParser.Item_dictContext,0)


        def item_tuple(self):
            return self.getTypedRuleContext(pyonParser.Item_tupleContext,0)


        def getRuleIndex(self):
            return pyonParser.RULE_item_object

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem_object" ):
                listener.enterItem_object(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem_object" ):
                listener.exitItem_object(self)




    def item_object(self):

        localctx = pyonParser.Item_objectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_item_object)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(pyonParser.OBJECT)
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pyonParser.LEFT_DICT]:
                self.state = 79
                self.item_dict()
                pass
            elif token in [pyonParser.LEFT_BUKKET]:
                self.state = 80
                self.item_tuple()
                pass
            elif token in [pyonParser.COLON, pyonParser.RIGHT_DICT, pyonParser.RIGHT_LIST, pyonParser.RIGHT_BUKKEFT]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





